@@ -319,6 +319,129 @@ name|style
 argument_list|)
 return|;
 block|}
+comment|/** Render an explanation as HTML. */
+DECL|method|toHtml
+specifier|public
+specifier|static
+name|String
+name|toHtml
+parameter_list|(
+name|Explanation
+name|explanation
+parameter_list|)
+block|{
+name|StringBuilder
+name|buffer
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
+decl_stmt|;
+name|buffer
+operator|.
+name|append
+argument_list|(
+literal|"<ul>\n"
+argument_list|)
+expr_stmt|;
+name|buffer
+operator|.
+name|append
+argument_list|(
+literal|"<li>"
+argument_list|)
+expr_stmt|;
+name|buffer
+operator|.
+name|append
+argument_list|(
+name|explanation
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|" = "
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|explanation
+operator|.
+name|getDescription
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|buffer
+operator|.
+name|append
+argument_list|(
+literal|"<br />\n"
+argument_list|)
+expr_stmt|;
+name|Explanation
+index|[]
+name|details
+init|=
+name|explanation
+operator|.
+name|getDetails
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|details
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|buffer
+operator|.
+name|append
+argument_list|(
+name|toHtml
+argument_list|(
+name|details
+index|[
+name|i
+index|]
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|buffer
+operator|.
+name|append
+argument_list|(
+literal|"</li>\n"
+argument_list|)
+expr_stmt|;
+name|buffer
+operator|.
+name|append
+argument_list|(
+literal|"</ul>\n"
+argument_list|)
+expr_stmt|;
+return|return
+name|buffer
+operator|.
+name|toString
+argument_list|()
+return|;
+block|}
 DECL|class|ExplainAugmenter
 specifier|static
 class|class
@@ -463,10 +586,10 @@ name|setField
 argument_list|(
 name|name
 argument_list|,
-name|exp
-operator|.
 name|toHtml
-argument_list|()
+argument_list|(
+name|exp
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
